--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -1,10 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="html/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="html/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="html/css/toastr.css" />
+    <link rel="stylesheet" href="html/css/toastr.min.css" />
+    <script src="html/js/jquery-3.1.0.min.js"></script>
+    <script src="html/js/jquery.min.js"></script>
+    <script src="html/js/bootstrap.js"></script>
+    <script src="html/js/bootstrap.min.js"></script>
+    <script src="html/js/toastr.js"></script>
+    <script src="html/js/toastr.min.js"></script>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>WebShop Home</title>
+
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="html/css/home.css">
+    <style type="text/css">
+    body {
+	    padding-top: 50px;
+        background-color: #e6e6e6;
+}
+</style>
 </head>
 <body>
+<!--  ********************************* NAVIGATION BAR ********************************* -->
 
+<nav id="myNavbar"
+     class="navbar navbar-inverse navbar-fixed-top"
+     role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#navbarCollapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span> <!-- crtica -->
+                <span class="icon-bar"></span> <!-- crtica -->
+                <span class="icon-bar"></span> <!-- crtica -->
+            </button>
+            <a class="navbar-brand" href="home.html"><img height="27" src="html/img/webshop.png"/></a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbarCollapse" >
+            <ul class="nav navbar-nav">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="shops.html">Shops</a></li>
+                <li><a href="deliverers.html">Deliverers</a></li>
+                <li><a href="#">Actions</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <!--<li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registruj Se</a></li>-->
+                <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- ********************************* SLIDE ********************************* -->
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active ">
+            <img src="html/img/webshopslajd2.png" alt="PC">
+            <div class="carousel-caption">
+                <h4 class="slajdTekst">Buying from your home.</h4>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="html/img/webshopslajd3.png" alt="Enter">
+            <div class="carousel-caption">
+                <h4 class="slajdTekst">Simple and efficient ordering.</h4>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="html/img/webshopslajd1.jpg" alt="Korpa">
+            <div class="carousel-caption">
+                <h4 class="slajdTekst">Home delivery</h4>
+            </div>
+        </div>
+
+    </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button"
+       data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"
+                                aria-hidden="true"></span> <span class="sr-only">Previous</span>
+    </a> <a class="right carousel-control" href="#myCarousel" role="button"
+            data-slide="next"> <span
+        class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
+</div>
+
+<!-- ********************************* LEFT CATEGORIES ********************************* -->
+<div class="container">
+    <div class="row">
+        <div class=".col-xs-6 .col-sm-8 .col-lg-10 pull-left sidebar">
+            <div class="navbar-form navbar-left">
+                <div class="form-group">
+                    <div class="form-group" style="color: white" id="kategorije">
+                        <h4>Categories:<br></h4>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ********************************* CENTER ********************************* -->
+        <div class=".col-xs-6 .col-sm-8 .col-lg-10 ">
+            <form class="navbar-form navbar-left">
+                <div class="form-group" id="sredina">
+
+                </div>
+
+            </form>
+        </div>
+
+        <!-- ********************************* RIGHT SEARCH ********************************* -->
+        <div class=".col-xs-6 .col-sm-8 .col-lg-10 pull-right">
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <button type="submit" onclick="return trzi()" class="btn btn-default">Search</button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
