--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -12,6 +12,7 @@
     <script src="html/js/bootstrap.min.js"></script>
     <script src="html/js/toastr.js"></script>
     <script src="html/js/toastr.min.js"></script>
+    <script src="html/js/homescript.js"></script>
 
     <meta charset="UTF-8">
     <title>WebShop Home</title>
@@ -52,8 +53,8 @@
                 <li><a href="#">Actions</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registruj Se</a></li>-->
-                <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                <li><a href="" onclick="profile()"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                <li><a href="#" onclick="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
             </ul>
         </div>
     </div>
