User profile done

--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -53,7 +53,7 @@
                 <li><a href="#">Actions</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="" onclick="profile()"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                <li><a id="usernamePlaceholder" href="#" onclick="profile()"><span class="glyphicon glyphicon-user"></span></a></li>
                 <li><a href="#" onclick="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
             </ul>
         </div>
@@ -122,7 +122,7 @@
         <!-- ********************************* CENTER ********************************* -->
         <div class=".col-xs-6 .col-sm-8 .col-lg-10 ">
             <form class="navbar-form navbar-left">
-                <div class="form-group" id="sredina">
+                <div class="form-group" id="center">
 
                 </div>
 
