Item categories done

--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -116,9 +116,8 @@
         <div class=".col-xs-6 .col-sm-8 .col-lg-10 pull-left sidebar">
             <div class="navbar-form navbar-left">
                 <div class="form-group">
-                    <div class="form-group" style="color: white" id="kategorije">
-                        <h4>Categories:<br></h4>
-                        <br>
+                    <div class="form-group" style="color: white" id="categories">
+
                     </div>
                 </div>
             </div>
