--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -226,6 +226,56 @@
         <br>
         <button onclick="return saveUserCategory()" id="dialogAdd4">Save</button>
     </div>
+
+    <div id="dialog5" title="Add Action Event">
+        <p>Code</p>
+        <input name="dCode5" type="text" id="dCode5">
+        <br>
+        <p>Name</p>
+        <input name="dName5" type="text" id="dName5">
+        <br>
+        <p>From (value in $)</p>
+        <input name="from5" type="date" id="from5">
+        <br>
+        <p>To (value in $)</p>
+        <input name="to5" type="date" id="to5">
+        <br>
+        <p>Coefficient (in %)</p>
+        <input name="coefficientC5" type="number" min="0" id="coefficientC5">
+        <br>
+        <p>Parent Category</p>
+        <select multiple name="category5" id="category5">
+
+        </select>
+        <br>
+        <br>
+        <button onclick="return saveActionEvent()" id="dialogAdd5">Save</button>
+    </div>
+
+    <div id="dialog6" title="Add Action Event">
+        <p>Code</p>
+        <input name="dCode6" type="text" id="dCode6">
+        <br>
+        <p>Name</p>
+        <input name="dName6" type="text" id="dName6">
+        <br>
+        <p>From (value in $)</p>
+        <input name="from6" type="date" id="from6">
+        <br>
+        <p>To (value in $)</p>
+        <input name="to6" type="date" id="to6">
+        <br>
+        <p>Coefficient (in %)</p>
+        <input name="coefficientC6" type="number" min="0" id="coefficientC6">
+        <br>
+        <p>Parent Category</p>
+        <select multiple name="category6" id="category6">
+
+        </select>
+        <br>
+        <br>
+        <button onclick="return saveChangesEvent()" id="dialogAdd6">Save</button>
+    </div>
 </div>
 </body>
 </html>
