Added search fields

--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -134,12 +134,12 @@
 
         <!-- ********************************* RIGHT SEARCH ********************************* -->
         <div class=".col-xs-6 .col-sm-8 .col-lg-10 pull-right">
-            <form class="navbar-form navbar-left">
+            <div class="navbar-form navbar-left">
                 <div class="form-group">
-                    <button type="submit" onclick="return trzi()" class="btn btn-default">Search</button>
+                    <button type="button" onclick="return searchItems()" class="btn btn-default">Search</button>
                 </div>
 
-            </form>
+            </div>
         </div>
     </div>
 
