Ready for actions

--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -159,6 +159,12 @@
             <option value="null">No Super Category</option>
         </select>
         <br>
+        <p>Is it wholesale category</p>
+        <select name="wholesale" id="wholesale">
+            <option value="false">No</option>
+            <option value="true">Yes</option>
+        </select>
+        <br>
         <br>
         <button onclick="return addNewCategory()" id="dialogAdd">Save</button>
     </div>
@@ -176,6 +182,11 @@
         <p>Parent Category</p>
         <select name="dSupCategory2" id="dSupCategory2">
             <option value="null">No Super Category</option>
+        </select>
+        <p>Is it wholesale category</p>
+        <select name="wholesale2" id="wholesale2">
+            <option value="false">No</option>
+            <option value="true">Yes</option>
         </select>
         <br>
         <br>
