Istorija racuna done

--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -53,9 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse" >
             <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="shops.html">Shops</a></li>
-                <li><a href="deliverers.html">Deliverers</a></li>
-                <li><a href="#">Actions</a></li>
+                <li><a href="#" onclick="showHistory()">History</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#" onclick="card()"><span class="glyphicon glyphicon-shopping-cart"></span> Card</a></li>
