--- a/buspass-ws-master/src/main/resources/static/home.html
+++ b/buspass-ws-master/src/main/resources/static/home.html
@@ -53,10 +53,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse" >
             <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#" onclick="showHistory()">History</a></li>
+                <li id="istorija" ><a href="#" onclick="showHistory()">History</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" onclick="card()"><span class="glyphicon glyphicon-shopping-cart"></span> Card</a></li>
+                <li id="korpa"><a href="#" onclick="card()"><span class="glyphicon glyphicon-shopping-cart"></span> Card</a></li>
                 <li><a id="usernamePlaceholder" href="#" onclick="profile()"><span class="glyphicon glyphicon-user"></span></a></li>
                 <li><a href="#" onclick="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
             </ul>
